# boxing

./: CMakeLists.txt  README.md  build.ps1  mod.json  qpm.json
.github/workflows/: build.yml
include/: BoxingConfig.hpp  BoxingScoreController.hpp  GloveManager.hpp  NoArrowEnforcer.hpp  UIManager.hpp
src/: BoxingConfig.cpp  BoxingScoreController.cpp  GloveManager.cpp  NoArrowEnforcer.cpp  UIManager.cpp  main.cpp
